src/objects/QPMS__QC_settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Org specific settings</description>
    <fields>
        <fullName>QPMS__Action_Plan_RecordTypeId__c</fullName>
        <label>Action Plan RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__AdhocTask_Actions_RecordTypeId__c</fullName>
        <label>AdhocTask Actions RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Adverse_event_Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Adverse event Optional when Product Problem is code is required</inlineHelpText>
        <label>Adverse event Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Allow_Multiple_CEM_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Multiple CEM Type</description>
        <label>Allow Multiple CEM Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Allow_Multiple_Planned_Audit_on_same_day__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow multiple planned audits same day</description>
        <label>Allow Multiple Planned Audit on same day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Allow_Multiple_SCR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>allow to create multiple scr</description>
        <label>Allow Multiple SCR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__AssessementQuestionTemplate__c</fullName>
        <description>this is used to store assessment template id</description>
        <label>AssessementQuestionTemplate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__AuditTrailReportId__c</fullName>
        <label>AuditTrailReportId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Group_Filter__c</fullName>
        <label>Audit Group Filter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Program_Report_Id__c</fullName>
        <description>Holds Audit Program Report Id</description>
        <inlineHelpText>Holds Audit Program Report Id</inlineHelpText>
        <label>Audit Program Report Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Report_Id__c</fullName>
        <description>Holds audit report id to be displayed on dashboard</description>
        <inlineHelpText>Holds audit report id to be displayed on dashboard</inlineHelpText>
        <label>Audit Report Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Auto_Create_Audits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By enabling this, audits in &quot;planned audit&quot; section will automatically creates audits when &quot;Start Date&quot; of audit is today</description>
        <label>Auto Create Audits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Auto_Populate_Default_NC_Rootcause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Populate Default NC Rootcause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Batch_Size__c</fullName>
        <defaultValue>100</defaultValue>
        <inlineHelpText>This is used in scheduler for batch execution except document module</inlineHelpText>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPA_Configurable_Workflow_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable CAPA Configurable Workflow Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPA_Group_Filter__c</fullName>
        <label>CAPA Group Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPA_Report_Id__c</fullName>
        <label>CAPA Report Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CMP_Report_Id__c</fullName>
        <description>For Complaints Report Id</description>
        <inlineHelpText>For Complaints Report Id</inlineHelpText>
        <label>CMP Report Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CR_Group_Filter__c</fullName>
        <label>CR Group Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CR_Report_Id__c</fullName>
        <label>CR Report Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CSMS_Group_Filter__c</fullName>
        <label>CSMS Group Filter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CSMS_Report_Id__c</fullName>
        <description>CSMS Report Id</description>
        <inlineHelpText>CSMS Report Id</inlineHelpText>
        <label>CSMS Report Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CSMS_Schedule_Interval__c</fullName>
        <description>Used to calculate Next Due Date for showing schedule record before mentioned days on dashboard for custodian.</description>
        <inlineHelpText>Used to calculate Next Due Date for showing schedule record before mentioned days on dashboard for custodian.</inlineHelpText>
        <label>CSMS Schedule Interval(In Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Cache_Expiry_Time_In_Hours__c</fullName>
        <description>Time to expire cache</description>
        <inlineHelpText>Time to expire cache</inlineHelpText>
        <label>Cache Expiry Time(In Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Certificate_Review_days__c</fullName>
        <description>review days in advance</description>
        <label>Certificate Review days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__ChecklistReport_Color__c</fullName>
        <label>ChecklistReport Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__ChecklistReport__c</fullName>
        <description>this is used to export report fore complete checklist</description>
        <label>ChecklistReport</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Checklist_Report_Score__c</fullName>
        <label>Checklist Report Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Checklist_Report_pass_fail__c</fullName>
        <label>Checklist Report pass fail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Close_NC_when_CAPA_is_closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close NC when CAPA is closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Community_Portal_User_Profiles__c</fullName>
        <label>Community Portal User Profiles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Complete_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Update Audit status to Complete</description>
        <inlineHelpText>To Update Audit status to Complete</inlineHelpText>
        <label>Complete Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Compliant_Group_Filter__c</fullName>
        <label>Compliant Group Filter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Connected_App_consumer_key__c</fullName>
        <label>Connected App consumer key</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Connected_App_consumer_secret__c</fullName>
        <label>Connected App consumer secret</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Containment_Action_RecordTypeId__c</fullName>
        <description>Containment Action Record Type id</description>
        <label>Containment Action RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CoverPageLogo__c</fullName>
        <description>Holdes logo id copied from document standard object from logos folder</description>
        <inlineHelpText>Holdes logo id copied from document standard object from logos folder</inlineHelpText>
        <label>CoverPageLogo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Create_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>allow to create address</description>
        <label>Create Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Create_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>allow to create contact</description>
        <label>Create Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Custom_Page__c</fullName>
        <description>Page to include all customer-specific logics dynamically on top of managed package</description>
        <inlineHelpText>Page to include all customer-specific logics dynamically on top of managed package</inlineHelpText>
        <label>Custom Page</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__DOC_Report_Id__c</fullName>
        <description>To display the Document Profile reports grouped by Status</description>
        <inlineHelpText>To display the Document Profile reports grouped by Status</inlineHelpText>
        <label>DOC Report Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Default_Audit_Pass_Fail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default status of audit pas/ fail will set to fail even one question is failed</description>
        <inlineHelpText>Default status of audit pas/ fail will set to fail in closure even one question is failed</inlineHelpText>
        <label>Default Audit Pass Fail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Display_Comments_to_External_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display Comments to External User</description>
        <label>Display Comments to External User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Display_Supplier_Details_As_Expanded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>it will displays the details as open view</description>
        <label>Display Supplier Details As Expanded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Display_Training_enabled_documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Training enabled documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Disposition_Section_RecordTypeId__c</fullName>
        <label>Disposition Section RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Group_Filter__c</fullName>
        <label>Document Group Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__DocumentsReportList__c</fullName>
        <label>DocumentsReportList</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Edit_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>allow to eit address</description>
        <label>Edit Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Edit_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>allow to edit contact</description>
        <label>Edit Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__EmailNotificationAfterSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EmailNotificationAfterSchedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Account_lookup_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To filter the accounts based on the custom field(record type)</description>
        <inlineHelpText>To filter the accounts based on the custom field(record type)</inlineHelpText>
        <label>Enable Account lookup Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Advance_Change_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Advance Change Management Flow (Includes Change Type Template)</description>
        <inlineHelpText>Enable Advance Change Management Flow (Includes Change Type Template)</inlineHelpText>
        <label>Enable Advance Change Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Audit_Trail__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To enable audit trail and chronology</description>
        <label>Enable Audit Trail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to Enable/Disable Audit Module</description>
        <inlineHelpText>Flag to Enable/Disable Audit Module</inlineHelpText>
        <label>Enable Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_CAPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable CAPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_CSMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to Enable/Disable CSMS Module</description>
        <inlineHelpText>Flag to Enable/Disable CSMS Module</inlineHelpText>
        <label>Enable CSMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Cache__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To enable browser cache  for faster response</description>
        <inlineHelpText>To enable browser cache  for faster response</inlineHelpText>
        <label>Enable Cache</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>handle the chatter in collaboration review task of document profile</description>
        <inlineHelpText>handle the chatter in collaboration review task of document profile</inlineHelpText>
        <label>Enable Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Createchecklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For enabling checklist in audittype and auditprogram,audit</description>
        <label>Enable Createchecklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_DOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable DOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Date_Format__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Date Format</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Document_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Document Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Document_Temp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>handling Document temp option from header drop down</description>
        <inlineHelpText>handling Document temp option from header drop down</inlineHelpText>
        <label>Enable Document Temp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Document_Watermark__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Document Watermark</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Email_Session_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send Email to Participants when Course Session is Cancelled.</description>
        <inlineHelpText>Send Email to Participants when Course Session is Cancelled.</inlineHelpText>
        <label>Enable Email Session Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Email_Session_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send Email to Followers when Course Session is Created.</description>
        <inlineHelpText>Send Email to Followers when Course Session is Created.</inlineHelpText>
        <label>Enable Email Session Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Email_Session_Is_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send Email to Internal Trainers when Course Session is Cancelled.</description>
        <inlineHelpText>Send Email to Internal Trainers when Course Session is Cancelled.</inlineHelpText>
        <label>Enable Email Session Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Email_Session_Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send Email to Internal Trainers when Course Session is Completed.</description>
        <inlineHelpText>Send Email to Internal Trainers when Course Session is Completed.</inlineHelpText>
        <label>Enable Email Session Is Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Email_Session_Is_In_Session__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send Email to Participants when Course Session is In Session.</description>
        <inlineHelpText>Send Email to Participants when Course Session is In Session.</inlineHelpText>
        <label>Enable Email Session Is In Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Email_Session_Is_Open_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send Email to All Participants When Course Session is in Open Enrollment.</description>
        <inlineHelpText>Send Email to All Participants When Course Session is in Open Enrollment.</inlineHelpText>
        <label>Enable Email Session Is Open Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Inspection_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To enable bypass inspection button</description>
        <label>Enable Inspection Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this is for inspection</description>
        <label>Enable Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_NC_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is for to enable or disable the email service</description>
        <label>Enable Email Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_NC_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable NC Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_NC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable NC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_PO_Numbering_Scheme__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to enable or disable numbering scheme for PO</description>
        <label>Enable PO Numbering Scheme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_PersonProfiles_With_Out_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Enabled, You can create Person Profiles without Users</inlineHelpText>
        <label>Enable PersonProfiles With Out Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Registration__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To Enable Product  Registration</description>
        <inlineHelpText>To Enable Product  Registration</inlineHelpText>
        <label>Enable Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Report_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Report Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Response_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Response Field</description>
        <label>Enable Response Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Security_Based_On_Initiating_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Security Based On Initiating Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Supplier_Qualification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>enable the supplier</description>
        <label>Enable Supplier Qualification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Sync_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sync the Complaint record to Case Management record</inlineHelpText>
        <label>Enable Sync Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Sync_Button_for_CEM_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sync Button for CEM type page</inlineHelpText>
        <label>Enable Sync Button for CEM Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to check training required or not</description>
        <label>Enable Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__EndPointURL__c</fullName>
        <inlineHelpText>End point URL of Case management</inlineHelpText>
        <label>EndPointURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Processing_URL__c</fullName>
        <defaultValue>&quot;/api/3.0/process&quot;</defaultValue>
        <description>URL to External Processing app minus the host name (e.g. If external app is https://qualityze-external-processing.herokuapp.com/api/3.0/process then this field should contain /api/3.0/process)</description>
        <inlineHelpText>URL to External Processing app minus the host name (e.g. If external app is https://qualityze-external-processing.herokuapp.com/api/3.0/process then this field should contain /api/3.0/process)</inlineHelpText>
        <label>External Processing URL</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Response_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>External Response Required ?</description>
        <label>External Response Required ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__GDPRBatchSize__c</fullName>
        <description>GDPR batch size for mask</description>
        <label>GDPRBatchSize</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Hide_Response_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Response Field</description>
        <label>Hide Response Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__History_Objects__c</fullName>
        <description>add History Objects here</description>
        <label>History Objects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__INS_Group_Filter__c</fullName>
        <label>INS Group Filter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__INS_Report_Id__c</fullName>
        <label>INS Report Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__ImportSessionBatchSize__c</fullName>
        <label>ImportSessionBatchSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Instance_Name__c</fullName>
        <inlineHelpText>Salesforce instance name (e.g. na41, ap2, eu5, etc.)</inlineHelpText>
        <label>Instance Name</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__InternalTrainer_Validation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal Trainer Validation Required</description>
        <label>InternalTrainer Validation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Internal_Comment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal Comment Required ?</description>
        <label>Internal Comment Required ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Interviewed_Personnel_RecordtypeId__c</fullName>
        <description>Used in audit summary records in audit junction</description>
        <inlineHelpText>Used in audit summary records in audit junction</inlineHelpText>
        <label>Interviewed Personnel RecordtypeId</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Is_CompleteChecklist_Validation_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting enabled the uses yo turn on/off the validation for answering all questions or not in Complete checklist page.</description>
        <label>Is CompleteChecklist Validation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Is_Complete_Observations__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Complete Observations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Is_Digital_Signature_Needed__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag To show or hide digital signature</description>
        <label>Is Digital Signature Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Is_Due_Date_Validation_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Due Date Validation Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Is_External_System_Capa_Reference_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is External System Capa Reference Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Is_Manager_Approval_required_For_Enroll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Manager Approval required For Enroll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Is_Need_Create_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <description>handle for create document option</description>
        <label>Is Need Create Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Is_inprogress_training_deletion_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is inprogress training deletion required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__LogoId__c</fullName>
        <description>Holdes logo id copied from document standard object from logos folder</description>
        <inlineHelpText>Holdes logo id copied from document standard object from logos folder</inlineHelpText>
        <label>LogoId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Logo_Style__c</fullName>
        <label>Logo Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Make_Site_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to site field should be editable or disable</description>
        <label>Make Site Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Max_Approvers__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Max Approvers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__NCReportId__c</fullName>
        <label>NCReportId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__NC_Configurable_Workflow_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable NC Configurable Workflow Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__NC_Group_Filter__c</fullName>
        <label>NC Group Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__NC_Internal_Supplier_Email_Address__c</fullName>
        <description>This is email service address</description>
        <label>Email Service Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Need_Additional_Resolution_Codes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Additional Resolution Codes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Number_Of_Days_For_Alerts__c</fullName>
        <label>Number Of Days For Alerts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__OauthURL__c</fullName>
        <description>OauthURL for digital signature. varies  for production and sandbox</description>
        <label>OauthURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Observation_Report_Id__c</fullName>
        <description>Holds Observation Report Id</description>
        <inlineHelpText>Holds Observation Report Id</inlineHelpText>
        <label>Observation Report Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Overdue_Documents_ReportId__c</fullName>
        <description>Overdue Documents Report Id</description>
        <label>Overdue Documents ReportId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__PersonProfilesRestrictedProfiles__c</fullName>
        <description>PersonProfilesRestrictedProfiles</description>
        <label>PersonProfilesRestrictedProfiles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Qualityze_Tabid__c</fullName>
        <description>Qualityze Tab id</description>
        <inlineHelpText>Qualityze Tabid</inlineHelpText>
        <label>Qualityze Tabid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Registration_Page_Custom_Include_Page__c</fullName>
        <description>Page to included in Registration page after package install</description>
        <inlineHelpText>Page to included in Registration page after package install</inlineHelpText>
        <label>Registration Page Custom Include Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Submission_Company_Name__c</fullName>
        <description>This is for Company Name in FDA XML Generation</description>
        <inlineHelpText>This is for Company Name in FDA XML Generation</inlineHelpText>
        <label>Regulatory Submission Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Remoting_Timeout__c</fullName>
        <label>Remoting Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Root_Cause_RecordTypeId__c</fullName>
        <label>Root Cause RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__SQM_Group_Filter__c</fullName>
        <description>group filter</description>
        <label>SQM Group Filter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>